syntax = "proto3";

package crawlerproto;

/*
Sender represents the file sender.
*/
service Sender {
    rpc Upload(stream Chunk) returns (stream UploadStatus) {}
}

/*
Chunk represents a chunk of a http response.
*/
message Chunk {
        bytes Content = 1;
        uint64 TaskId = 2;
        string Address = 3;
        string TaskError = 4;
        repeated HeaderArray Header = 5;
        int32 StatusCode = 6;
        int64 ResponseTime = 7;
}

/*
HeaderArray consists of keys and values
*/
message HeaderArray {
        string Key = 1;
        repeated HeaderArrayValue ValueArr = 2;
}

/*
HeaderArray consists of keys and values
*/
message HeaderArrayValue {
        string Value = 1;
}

/*
UploadStatusCode gives information. the receiver sends a ok if he received all chunks.
*/
enum UploadStatusCode {
        Ok = 0;
        Failed = 1;
}

/*
UploadStatus is the response from the receiver.
*/
message UploadStatus {
        UploadStatusCode Code = 2;
}